# deepnano-blitz

./: Cargo.toml  LICENSE  README.md  build.rs  setup.py
deepnano2/: __init__.py  gpu_model.py
deepnano2/weights/: rnn48.txt  rnn56.txt  rnn64.txt  (+2 more)
scripts/: deepnano2_caller.py  deepnano2_caller_gpu.py
src/: activations.rs  approx.rs  beam_search.rs  conv_layer.rs  gru_layer.rs  lib.rs  matrix_load.rs  models.rs
test_sample/: 5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read1603_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read1644_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read2767_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read3421_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read3576_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch100_read3899_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch101_read6819_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch101_read7106_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch101_read7336_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch102_read1511_strand.fast5  5210_N125509_20170424_FN2002039725_MN19691_sequencing_run_klebs_033_75349_ch102_read1700_strand.fast5  (+38 more)
weights/: weightsn460.txt
